Add GitHub Actions workflow and improve Docker setup
CI/CD:
- Add workflow to build and push Docker image to ghcr.io
- Multi-platform support (amd64, arm64)
- Automatic tagging on push to main and releases

Docker improvements:
- Use pre-built image from ghcr.io by default
- Add proper health check dependencies in example stack
- Make all values configurable via environment variables
- Add usage instructions to example docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   ingester:
-    build: .
+    image: ghcr.io/nichtlegacy/apple-health-ingester:latest
+    # Or build locally:
+    # build: .
     container_name: apple-health-ingester
     restart: unless-stopped
     ports:
